--- a/Group Report/Lab 2/L2-phiho267-zijfe244.Rmd
+++ b/Group Report/Lab 2/L2-phiho267-zijfe244.Rmd
@@ -182,13 +182,16 @@ f <- function(cname){
 plot(arrangeGrob(grobs = lapply(cnames, f)))
 ```
 ```{r}
+# use take the beta - exclude the vairance
+data_hist = data_hist[,1:3] 
+
 # overlay a curve for the posterior median
 beta_median = matrixStats::colMedians(as.matrix(data_hist))
 pred.1b = beta_median %*% t(X)
 
 # credible intervals
-    # each column represents all possible values at a fixed time
-preds <- as.matrix(data_hist) %*% t(X)
+# each column represents all possible values at a fixed time
+preds <- as.matrix(data_hist) %*% t(X) # regression function
 pred_interval <- data.frame(nrow = n, nrow = 2)
 
 colnames(pred_interval) <- c("lower","upper")
@@ -225,14 +228,14 @@ ggplot(data.1c) +
   geom_line(aes(x = time, y = t(pred.1b)),color = "Blue",size = 1) +
   geom_line(aes(x = time, y = lower), color = "Red", linetype = "dotted", size = 1.5) +
   geom_line(aes(x = time, y = upper), color = "Red", linetype = "dotted", size = 1.5) +
-  geom_line(aes(x = time,y = pred_highest), color = "black", linetype = "solid", size = 1)
+  geom_line(aes(x = time,y = pred_highest), color = "#7bed9f", linetype = "solid", size = 1)
 ```
 
 ## (d) Polynomial model of order 7
 Say now that you want to *estimate a polynomial model of order 7*, but you suspect that higher order terms may not be needed, and you worry about overfitting. Suggest a suitable prior that mitigates this potential problem. You do not need to compute the posterior, just write down your prior. [Hint: the task is to specify $\mu_0$ and $\Omega_0$ in a smart way.]
 
 According to slide 11 in Lecture 5, too many knots may result in overfitting. We can use regularization prior to avoid such problem. Using 
-$$\beta_i \sim N(\mu_0,\frac{\sigma^2}{\lambda}),\ \  where \ \ \Omega_0 = \lambda\cdot I_3, $$
+$$\beta_i \mid \sigma^2 \sim N(\mu_0,\frac{\sigma^2}{\lambda}),\ \  where \ \ \Omega_0 = \lambda\cdot I_3, $$
 
 the parameter $\lambda$ will control the variance of $\beta_i$. If $\lambda$ is larger, $\beta_i$ would be much closer to $\mu_0$.
 
@@ -246,7 +249,8 @@ rm(list=ls())
 # 2. Posterior approximation for classification with logistic regression
 The dataset **WomenWork.dat** contains *n* = 200 observations (i.e. women) on the following nine variables:
 
-```{r, eval = FALSE, echo=FALSE, out.width="350px", out.height="300px", fig.align = "center"}
+
+```{r, eval = True, echo=FALSE, out.width="350px", out.height="300px", fig.align = "center"}
 knitr::include_graphics("lab2_table_ex2.png")
 ```
 
@@ -518,6 +522,9 @@ plot(arrangeGrob(grobs = lapply(covNames, f)))
 example <- matrix(c(1, 10, 8, 10, (10/10)^2, 40, 1, 1), nrow = 1)
 # 1000 predictions for such example
 pred.hist <- as.data.frame(t(example %*% t(data.hist)))
+
+sigmoid <- 1/(1+exp(-pred.hist))
+
 ggplot(pred.hist, aes(x=V1)) +
   geom_density(alpha = .2, fill = "#FF6666")
 ```
